removed spacing bug for the hts section

--- a/src/styles/sass/global.sass
+++ b/src/styles/sass/global.sass
@@ -566,6 +566,7 @@ span
 
 
 .main-page-hts
+    font-size: 0
 
     .hts-image
         width: 100%
@@ -579,9 +580,11 @@ span
         width: 100%
         height: 250px
         background-color: $color-blue-transparent
-        margin-top: -7px
+        // margin-top: -7px
 
     .grid-layout-hts
+
+        font-size: 1rem
 
         padding-bottom: 60px
         margin: 0 auto
@@ -591,7 +594,7 @@ span
 
         display: grid
 
-        @media (min-width: 961px)
+        @media (min-width: 960.1px)
             grid-template-areas: "logo date" "logo description"
             grid-template-columns: 30% auto
             grid-template-rows: auto auto
@@ -627,7 +630,7 @@ span
         align-self: flex-end
         justify-self: flex-end
 
-    @media (min-width: 961px)
+    @media (min-width: 960.1px)
         .hts-logo
             content: url("/design_elements/hts_prezentare_windows.svg")
 
